# question_correction

./: .gitignore  README.md  url.txt
hand_recognition/: .gitignore  README.md  main.py  pushCode.sh  requirements.txt  url.txt
hand_recognition/Python_api/: __init__.py  server_api_det.py  server_api_handreg.py  server_api_mathreg.py  server_api_rot.py
hand_recognition/Python_api/detect_pycode/: api_det.py  hand_det_server.py  nohup.txt
hand_recognition/Python_api/formula_pycode/: dict_test_240.txt  formula_ocr.py
hand_recognition/Python_api/reg_pycode/: crnn_resnet_5780_gru.py  crnn_resnet_5780_gru_fpn.py  params_test.py
hand_recognition/Python_api/rot_pycode/: api_rot.py  hand_rot_server.py  nohup.txt
hand_recognition/app/common/: singleton.py
hand_recognition/app/resources/: handreg.py  r_image_service.py  server_api_det.py  server_api_handreg.py  server_api_mathreg.py  server_api_rot.py
ocr_common_detect/: README.md  requirements.txt
ocr_common_detect/config/: config.ini
ocr_common_detect/test/: ocr_test.py
ocr_common_detect/test/std_json_result/: 18000_quiz_2019_02_01_3668468_1549036774242_quizimg_54698_21981_3.json  27816_quiz_2019_05_15_6872583_1557922525501_1557922519154.json  27816_quiz_2019_06_16_9154182_1560647582276_quizimg_54801_26090_4.json  3a7qKtVC74.json  3aFw6c6TgR.json  3aHhEx2MM2.json  3aaDw2wT2W.json  3gZJbnF8GC.json  3gzpDevPYp.json  53550_stucommit_2018_01_31_1517394032232977702813.json  57726_quiz_2019_01_06_7802997_1546773662965_quizimg_48599_19595_5.json  9572_quiz_2019_05_26_8547357_1558873820209_1558873802647.json  IMG_20191203_150744.json  IMG_20191204_154044.json  IMG_20191205_170211.json  IMG_20191205_175114.json  IMG_20191206_143334.json  IMG_20191206_143448.json  IMG_20191213_111631.json  IMG_20191213_141100.json  IMG_20191218_165028.json  quiz_2019_08_03_1917644_1564836747121_quizimg_58782_29393_1.json  quiz_2019_08_03_3118126_1564818031229_quizimg_58783_29393_1.json  quiz_2019_08_03_3286606_1564835870811_quizimg_58786_29393_1.json  quiz_2019_08_07_10223796_1565180140538_1565180135964.json  quiz_2019_08_07_17005530_1565169391321_quizimg_67013_29686_1.json  quiz_2019_08_07_8799791_1565184227999_1565184203324.json
ocr_common_detect/test/test_res_json/: 18000_quiz_2019_02_01_3668468_1549036774242_quizimg_54698_21981_3.json  27816_quiz_2019_05_15_6872583_1557922525501_1557922519154.json  27816_quiz_2019_06_16_9154182_1560647582276_quizimg_54801_26090_4.json  3a7qKtVC74.json  3aFw6c6TgR.json  3aHhEx2MM2.json  3aaDw2wT2W.json  3gZJbnF8GC.json  3gzpDevPYp.json  53550_stucommit_2018_01_31_1517394032232977702813.json  57726_quiz_2019_01_06_7802997_1546773662965_quizimg_48599_19595_5.json  9572_quiz_2019_05_26_8547357_1558873820209_1558873802647.json  IMG_20191203_150744.json  IMG_20191204_154044.json  IMG_20191205_170211.json  IMG_20191205_175114.json  IMG_20191206_143334.json  IMG_20191206_143448.json  IMG_20191213_111631.json  IMG_20191213_141100.json  IMG_20191218_165028.json  quiz_2019_08_03_1917644_1564836747121_quizimg_58782_29393_1.json  quiz_2019_08_03_3118126_1564818031229_quizimg_58783_29393_1.json  quiz_2019_08_03_3286606_1564835870811_quizimg_58786_29393_1.json  quiz_2019_08_07_10223796_1565180140538_1565180135964.json  quiz_2019_08_07_17005530_1565169391321_quizimg_67013_29686_1.json  (+1 more)
print_formula_recognition_high/: CMakeCache.txt  CMakeLists.txt  accurate_formula_high.cpp  cmake_install.cmake  service_name
question_classification_detect/: README.md  requirements1.txt  requirements2.txt  requirements3.txt
question_classification_detect/separatequestion_det_jyy/: conf.py  separatequestion_infer.py
(+76 files in other folders)
